# Lima-camera-slsdetector

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
conda/camera/: build.sh  meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  installation.rst  installation_eiger_server_and_fw.rst  tango.rst
include/: SlsDetectorAcq.h  SlsDetectorArgs.h  SlsDetectorBebTools.h  SlsDetectorBuffer.h  SlsDetectorCPUAffinity.h  SlsDetectorCamera.h  SlsDetectorDefs.h  SlsDetectorDoubleBuffer.h  SlsDetectorEiger.h  SlsDetectorFrameMap.h  SlsDetectorInterface.h  SlsDetectorJungfrau.h  SlsDetectorModel.h  SlsDetectorReceiver.h  SlsDetectorReconstruction.h  SlsDetectorSip.h  SlsdetectorInterface.h
python/: __init__.py
sip/: SlsDetector.sip  SlsDetectorBebTools.sip  SlsDetectorBuffer.sip  SlsDetectorCPUAffinity.sip  SlsDetectorCamera.sip  SlsDetectorDefs.sip  SlsDetectorEiger.sip  SlsDetectorFrameMap.sip  SlsDetectorInterface.sip  SlsDetectorJungfrau.sip  SlsDetectorModel.sip  SlsDetectorReconstruction.sip
src/: Makefile  SlsDetectorAcq.cpp  SlsDetectorArgs.cpp  SlsDetectorBebTools.cpp  SlsDetectorBuffer.cpp  SlsDetectorCPUAffinity.cpp  SlsDetectorCamera.cpp  SlsDetectorDefs.cpp  SlsDetectorEiger.cpp  SlsDetectorFrameMap.cpp  SlsDetectorInterface.cpp  SlsDetectorJungfrau.cpp  SlsDetectorModel.cpp  SlsDetectorReceiver.cpp  SlsDetectorReconstruction.cpp  SlsdetectorInterface.cpp
tango/: CMakeLists.txt  SlsDetector.py  SlsDetectorEiger.py  SlsDetectorJungfrau.py
test/: .gitignore  CMakeLists.txt  Makefile  eiger_packet.py  packet.py  test_affinity_map.py  test_eiger_flow_control_packets.py  test_eiger_fpga_frame_ptr_diff.py  test_expand_4.cpp  test_global_affinity_mgr.py  test_int_trig_mult.py  test_sls_detector.cpp  test_sls_detector.h  test_sls_detector_control.cpp  test_sls_detector_control.py  test_slsdetector.cpp  test_slsdetector.h  test_slsdetector_buffer.py  test_slsdetector_control.cpp  test_slsdetector_control.py  test_slsdetector_netdev_affinity.py  test_stat.cpp  test_thread_cpu_affinity.cpp
